@@ -1,0 +1,14 @@
+# zmq push example. Run the zmq_puller.py program for the client
+
+import curio.zmq as zmq
+
+async def pusher(address):
+    ctx = zmq.Context()
+    sock = ctx.socket(zmq.PUSH)
+    sock.bind(address)
+    for n in range(100):
+        await sock.send(b'Message %d' % n)
+    await sock.send(b'exit')
+
+if __name__ == '__main__':
+    zmq.run(pusher('tcp://*:9000'))
